chore(release): prepare 0.2.0 and add migration guide